Fixed animations on mobile

--- a/assets/css/pic_style.css
+++ b/assets/css/pic_style.css
@@ -14,43 +14,15 @@
     object-fit:cover;
 }
 
-.gallery2 img {
-    object-fit:cover;
-}
-
-.row {
-    margin: auto auto;
-    margin-bottom: 00px;
-}
-
-.row img {
-    width: 300px;
-    height:300px;
-    object-fit:cover;
-}
-
-.item {
-    width: 300px;
-    height:300px;
-    margin-bottom: 100px;
-}
-
 .gallery img:hover {
     filter: grayscale(100%);
     transform: scale(1.1);
 }
-
-.item img {
-    transition: 1s;
-    padding: 20px;
-    width: 300px;
-    height:300px;
-    object-fit:cover;
-}
-
-.item img:hover {
-    filter: grayscale(100%);
-    transform: scale(1.1);
+@media screen {
+    .gallery img:hover {
+        filter: grayscale(0);
+        transform: scale(1.0);
+    }
 }
 
 a {
@@ -59,13 +31,13 @@ a {
 
 figure {
     display: inline-block;
-    /* *border: 1px dotted gray; */
     margin: 20px; /* adjust as needed */
 }
+
 figure img {
     vertical-align: top;
 }
+
 figure figcaption {
-    /* border: 1px dotted blue; */
     text-align: center;
 }
